--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,43 +1,34 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
+name: Java CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  - push
+  - pull_request
 
-permissions:
-  contents: read
+defaults:
+  run:
+    working-directory: ./app
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 20
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: '20'
           distribution: 'temurin'
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      - uses: gradle/gradle-build-action@v2
         with:
+          gradle-version: 8.5
           arguments: build
           build-root-directory: app
       - name: Publish code coverage
-        uses: paambaati/codeclimate-action@v3.2.0
+        uses: paambaati/codeclimate-action@v5.0.0
         env:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
           JACOCO_SOURCE_PATH: app/src/main/java
         with:
           coverageCommand: make report
-          coverageLocations: app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
+          coverageLocations: ${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
